fix(slider): use runOutsideAngular to wrap mouse events #INFR-837

--- a/src/slider/slider.scss
+++ b/src/slider/slider.scss
@@ -1,4 +1,4 @@
-.thy-slider-container {
+.thy-slider {
     width: 100%;
     padding: 5px;
     box-sizing: border-box;
